// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ storybook ] [ Atoms/Avatar ] should render Default 1`] = `
<DocumentFragment>
  <div
    class="avatar"
  >
    <picture
      class="picture is-rounded with-border"
    >
      <img
        src="https://picsum.photos/id/1027/200/200"
        style="height: 44px; max-width: 44px;"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Avatar ] should render Sizes 1`] = `
<DocumentFragment>
  <div
    class="avatar"
  >
    <picture
      class="picture is-rounded with-border"
    >
      <img
        src="https://picsum.photos/id/1027/200/200"
        style="height: 22px; max-width: 22px;"
      />
    </picture>
  </div>
  <div
    class="avatar"
  >
    <picture
      class="picture is-rounded with-border"
    >
      <img
        src="https://picsum.photos/id/1027/200/200"
        style="height: 44px; max-width: 44px;"
      />
    </picture>
  </div>
  <div
    class="avatar"
  >
    <picture
      class="picture is-rounded with-border"
    >
      <img
        src="https://picsum.photos/id/1027/200/200"
        style="height: 66px; max-width: 66px;"
      />
    </picture>
  </div>
</DocumentFragment>
`;
